Fix Waveform Hue Shift

--- a/SC-UltraDark-MOD.user.css
+++ b/SC-UltraDark-MOD.user.css
@@ -2020,6 +2020,21 @@
             -o-filter: hue-rotate(340deg);
         }
     }
+    canvas, .repeatControl:after, .commentPopover__username, a.commentPopover__username:hover, a.commentPopover__username:visited, .volume__sliderHandle, .volume__sliderProgress, .sc-button-play, .playbackTimeline, .heroPlayButton, #app > header > div > div.header__left > div, #app > header > div > div.header__right.sc-clearfix > a, .sc-button-active, .sc-button-selected, .sc-button-cta, .sc-button-cta:hover, .sc-button-cta:focus, .sc-button-cta:visited, .sc-toggle:before, #content > div > div.l-listen-wrapper > div.l-about-main > div > div:nth-child(1) > div > div > div > div.listenEngagement__extras > div.listenEngagement__shuffle > div > label > span, .moreMenu__link.moreMenu__goUpsell, .newItemBadge.newItems__some, .sc-status-icon, .g-tabs-link.active, .g-required-label:after /* ---[ colors everything ]--- */ {
+        -webkit-animation: rainbow 4s steps(36) infinite!IMPORTANT;
+           -moz-animation: rainbow 4s steps(36) infinite!IMPORTANT;
+            -ms-animation: rainbow 4s steps(36) infinite!IMPORTANT;
+             -o-animation: rainbow 4s steps(36) infinite!IMPORTANT;
+                animation: rainbow 4s steps(36) infinite!IMPORTANT;
+        -webkit-animation-timing-function: ease-in-out;}
+
+    .waveformCommentsNode {
+        -webkit-animation: 0s!IMPORTANT;
+           -moz-animation: 0s!IMPORTANT;
+            -ms-animation: 0s!IMPORTANT;
+             -o-animation: 0s!IMPORTANT;
+                animation: 0s!IMPORTANT;}
+
 }
 
 @-moz-document regexp("http(s)?://(|www.)?soundcloud.com/connect?.*") {
